# docs/swagger.json
@@ -5,62 +5,6 @@
     },
     "paths": {
         "/api/v1/note": {
-            "get": {
-                "description": "Get notes",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "note"
-                ],
-                "summary": "Get notes",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "id",
-                        "name": "id",
-                        "in": "path"
-                    },
-                    {
-                        "description": "search params",
-                        "name": "input",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/transport.getNotesRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "Created",
-                        "schema": {
-                            "$ref": "#/definitions/transport.createNoteResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/transport.errorResponse"
-                        }
-                    },
-                    "409": {
-                        "description": "Conflict",
-                        "schema": {
-                            "$ref": "#/definitions/transport.errorResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/transport.errorResponse"
-                        }
-                    }
-                }
-            },
             "post": {
                 "description": "create note",
                 "consumes": [
@@ -70,7 +14,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "note"
+                    "notes"
                 ],
                 "summary": "Create note",
                 "parameters": [
@@ -88,7 +32,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/transport.createNoteResponse"
+                            "$ref": "#/definitions/transport.successCUDResponse"
                         }
                     },
                     "400": {
@@ -115,16 +59,13 @@
         "/api/v1/note/{id}": {
             "get": {
                 "description": "Get note by id",
-                "consumes": [
-                    "application/json"
-                ],
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "note"
+                    "notes"
                 ],
-                "summary": "Get note",
+                "summary": "Get note by id",
                 "parameters": [
                     {
                         "type": "integer",
@@ -138,7 +79,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/transport.createNoteResponse"
+                            "$ref": "#/definitions/transport.getNoteResponse"
                         }
                     },
                     "400": {
@@ -147,8 +88,8 @@
                             "$ref": "#/definitions/transport.errorResponse"
                         }
                     },
-                    "409": {
-                        "description": "Conflict",
+                    "404": {
+                        "description": "Not Found",
                         "schema": {
                             "$ref": "#/definitions/transport.errorResponse"
                         }
@@ -163,14 +104,11 @@
             },
             "delete": {
                 "description": "Delete note by id",
-                "consumes": [
-                    "application/json"
-                ],
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "note"
+                    "notes"
                 ],
                 "summary": "Delete note",
                 "parameters": [
@@ -183,20 +121,14 @@
                     }
                 ],
                 "responses": {
-                    "201": {
-                        "description": "Created",
+                    "200": {
+                        "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/transport.createNoteResponse"
+                            "$ref": "#/definitions/transport.successCUDResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/transport.errorResponse"
-                        }
-                    },
-                    "409": {
-                        "description": "Conflict",
                         "schema": {
                             "$ref": "#/definitions/transport.errorResponse"
                         }
@@ -218,7 +150,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "note"
+                    "notes"
                 ],
                 "summary": "Update note",
                 "parameters": [
@@ -230,7 +162,7 @@
                         "required": true
                     },
                     {
-                        "description": "params for update",
+                        "description": "updating params",
                         "name": "input",
                         "in": "body",
                         "required": true,
@@ -240,10 +172,10 @@
                     }
                 ],
                 "responses": {
-                    "201": {
-                        "description": "Created",
+                    "202": {
+                        "description": "Accepted",
                         "schema": {
-                            "$ref": "#/definitions/transport.createNoteResponse"
+                            "$ref": "#/definitions/transport.successCUDResponse"
                         }
                     },
                     "400": {
@@ -252,8 +184,107 @@
                             "$ref": "#/definitions/transport.errorResponse"
                         }
                     },
-                    "409": {
-                        "description": "Conflict",
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/transport.errorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/notes": {
+            "get": {
+                "description": "Get all notes",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "notes"
+                ],
+                "summary": "Get all notes",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/transport.getNotesResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/transport.errorResponse"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "notes"
+                ],
+                "summary": "Delete notes",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/transport.successCUDResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/transport.errorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/notes/{page}": {
+            "post": {
+                "description": "Get notes with filter",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "notes"
+                ],
+                "summary": "Get notes with filter",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "id",
+                        "name": "page",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "searching params",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/transport.getNotesRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/transport.getNotesResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/transport.errorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
                         "schema": {
                             "$ref": "#/definitions/transport.errorResponse"
                         }
@@ -269,6 +300,26 @@
         }
     },
     "definitions": {
+        "entity.Note": {
+            "type": "object",
+            "properties": {
+                "date": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "status": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
+                }
+            }
+        },
         "transport.createNoteInput": {
             "type": "object",
             "required": [
@@ -293,19 +344,19 @@
                 }
             }
         },
-        "transport.createNoteResponse": {
-            "type": "object",
-            "properties": {
-                "id": {
-                    "type": "integer"
-                }
-            }
-        },
         "transport.errorResponse": {
             "type": "object",
             "properties": {
                 "error": {
                     "type": "string"
+                }
+            }
+        },
+        "transport.getNoteResponse": {
+            "type": "object",
+            "properties": {
+                "note": {
+                    "$ref": "#/definitions/entity.Note"
                 }
             }
         },
@@ -326,6 +377,25 @@
                     "type": "integer"
                 },
                 "status": {
+                    "type": "string"
+                }
+            }
+        },
+        "transport.getNotesResponse": {
+            "type": "object",
+            "properties": {
+                "notes": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/entity.Note"
+                    }
+                }
+            }
+        },
+        "transport.successCUDResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
                     "type": "string"
                 }
             }
